--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,18 +14,16 @@ builds:
     ldflags:
       - "-s -w -X main.version={{.Version}} -X main.commit={{.Commit}}"
     goos:
-      - freebsd
+      # - freebsd # If you're using this provider with freebsd, open a PR
       - windows
       - linux
       - darwin
     goarch:
       - amd64
-      - "386"
-      - arm
       - arm64
     ignore:
-      - goos: darwin
-        goarch: "386"
+      - goos: windows
+        goarch: arm64
     binary: "{{ .ProjectName }}_v{{ .Version }}"
 archives:
   - format: zip
@@ -50,3 +48,6 @@ release:
   # draft: true
 changelog:
   skip: true
+
+snapshot:
+  name_template: '{{ incpatch .Version }}-snapshot'
